# chat_memo

./: .gitignore  .mypy.ini  Makefile  PIPELINE.md  README.md  dvc.yaml  pyproject.toml
config/: credential.yaml.example
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: generate_texts.py
src/features/: parse_texts.py
src/utils/: miro.py
src/visualization/: ui.py
