[tool.poetry]
name = "chat_memo"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.35.2"
openai = "^0.27.8"
langchain = "^0.0.202"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
dvc = "^3.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
